Fixed input issues on Firefox

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -290,10 +290,15 @@ main {
           border: none;
           outline: none;
         }
+        /* Chrome, Safari, Edge, Opera */
         input::-webkit-outer-spin-button,
         input::-webkit-inner-spin-button {
           -webkit-appearance: none;
           margin: 0;
+        }
+        /* Firefox */
+        input[type=number] {
+          -moz-appearance: textfield;
         }
         button {
           border: none;
